# rust_template

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  test.sh
config/: development.yaml  test.yaml
examples/: playground.rs
frontend/: package-lock.json  package.json  rsbuild.config.ts
frontend/src/: index.css  index.tsx
migration/src/: lib.rs  m20260527_000001_refresh_tokens.rs  m20260527_000002_rbac.rs  m20260527_000003_admin_extensions.rs  m20260527_000004_tenants.rs  m20260527_000005_operations_infra.rs  m20260527_000006_email_templates.rs  m20260527_000007_work_orders.rs  m20260527_000008_payments.rs  m20260527_000009_database_restores.rs  m20260527_000010_content_management.rs  m20260527_000011_departments.rs  m20260527_000012_resource_storage.rs  m20260527_000013_upload_tasks.rs  m20260615_000014_ai_image_generations.rs  m20260616_000015_command_management.rs  m20260619_000016_command_orchestration.rs  m20260621_000017_command_artifact_preview.rs
src/: app.rs  errors.rs  lib.rs  openapi.rs  responses.rs
src/controllers/: auth.rs  docs.rs  frontend.rs  mod.rs
src/fixtures/: data_scopes.yaml  departments.yaml  dict_items.yaml  dict_types.yaml  email_templates.yaml  menus.yaml  permissions.yaml  rate_limit_rules.yaml  role_data_scopes.yaml  role_menus.yaml  role_permissions.yaml  roles.yaml  scheduled_tasks.yaml  storage_buckets.yaml  storage_profiles.yaml  system_notifications.yaml  system_settings.yaml  tenants.yaml  user_departments.yaml  user_roles.yaml  users.yaml
src/mailers/: auth.rs
src/middleware/: rate_limit.rs
src/models/: admin_logs.rs  database_backups.rs  email_templates.rs  menus.rs  mod.rs  permissions.rs  rbac.rs  refresh_tokens.rs  roles.rs  system_settings.rs  users.rs
src/services/: command_runner.rs  command_workflow_runner.rs  http_client.rs  mod.rs  storage.rs
src/tasks/: admin.rs  mod.rs  operations.rs
src/views/: auth.rs
tests/models/: users.rs
tests/requests/: admin.rs  auth.rs  mod.rs  prepare_data.rs
(+178 files in other folders)
