[workspace]

[package]
name = "gpt_images"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "gpt_images-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "process",
  "io-util",
  "time",
  "net",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["multipart", "ws"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
axum-extra = { version = "0.10", features = ["form"] }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
base64 = { version = "0.22" }
utoipa = { version = "5", features = ["chrono", "uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "socks"] }
object_store = { version = "0.11", features = ["aws"] }
sysinfo = { version = "0.33" }
portable-pty = { version = "0.8" }
futures-util = { version = "0.3" }
mime_guess = { version = "2.0" }

[[bin]]
name = "gpt_images-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
